--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,13 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="add_meal">click here to add meal</string>
+    <string name="delete_meal_tooltip">Click here to delete this meal</string>
+    <string name="amount_g">Amount (g)</string>
+    <string name="date_time"><![CDATA[Date & Time]]></string>
+    <string name="time">time</string>
+    <string name="time_pick">Time</string>
+    <string name="date">Date</string>
+    <string name="new_meal">New Meal</string>
 
 </resources>
